--- a/index.html
+++ b/index.html
@@ -51,10 +51,41 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>InteNSE'23</h2>
-										<p>A one-day workshop to discuss the opportunities and challenges in neural software engineeing and analysis.</p>
+										<h4>InteNSE'23: The 1st International Workshop on Interpretability and
+											Robustness in Neural Software Engineering</h4>
+										<p style="text-align:center">May 14th, 2023</p>
+										<p style="text-align:center">[Co-located with ICSE'23, Melbourne, Australia]</p>					
 									</header>
+									
 									<p>
+										<h4>Why InteNSE?</h4>
+										Code is the most recent modality of interest in Machine Learning (ML) domain.
+										The learning-based techniques have been shown to improve and revolutionize
+										software engineering and analysis tasks, including code completion and synthesis,
+										code captioning and documentation, code search and clone detection, recovering
+										variable names and types, and software testing, verification, and debugging.
+										Recent studies have even shown the great potential of neural models of code for
+										decomposing the natural language reasoning problem into programmatic steps and
+										solving it by executing the generated programs. Most of these techniques consider
+										ML as closed-box, i.e., only considering the final performance of the developed
+										models to evaluate their effectiveness. Without a systematic and rigorous
+										technique to interpret neural models concerning code modality, one cannot
+										validate their actual performance, generalizability, decision certainty,
+										if/how they are learning what they are supposed to do, and why they make
+										particular decisions.										
+									</p>
+									<p>
+										InteNSE is an interdisciplinary workshop for research at the intersection of
+										ML and Software Engineering (SE). The InteNSE workshop aims to promote the
+										required <b>awareness</b> and <b>knowledge</b> necessary for both research
+										communities to interpret neural models of code and design robust neural models
+										for software analysis and engineering. The InteNSE program will combine academia
+										and industry in a quest for well-founded practical solutions.
+										We invite international experts in academia and industry with both ML and SE
+										backgrounds to (1) discuss their research, (2) evaluate prior ML4Code research,
+										and (3) identify the roadmap for the research domain. 
+									</p>
+									<!-- <p>
 										<h4>What is Neural Software Engineering?</h4> 
 										Due to recent computational advancements in Deep Learning (DL), data-driven tools and algorithms have 
 										become an inseparable part of different research areas in the Software Engineering.
@@ -114,7 +145,7 @@
 												</td>
 												</tr>
 										</table>
-									</br>
+									</br> -->
 								</div>
 							</section>
 
