change the color

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/InteNSE.jpg" alt="" /></span>
-					<p>First Workshop on Interpretability and Robustness in Neural Software Engineering (ICSE 2023 Workshop)</p>
+					<!-- <p>First Workshop on Interpretability and Robustness in Neural Software Engineering (ICSE 2023 Workshop)</p> -->
 				</header>
 					<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Components</a></li>
-						<li><a href="#three">Topics of Interest</a></li>
-						<li><a href="#four">Submission Guidelines</a></li>
-						<li><a href="#five">Participation</a></li>
-						<li><a href="#six">Organization and Program Committees</a></li>
+						<li><a href="#one" class="active"><i>About</i></a></li>
+						<li><a href="#two"><i>Components</i></a></li>
+						<li><a href="#three"><i>Topics of Interest</i></a></li>
+						<li><a href="#four"><i>Submission Guidelines</i></a></li>
+						<li><a href="#five"><i>Participation</i></a></li>
+						<li><a href="#six"><i>Organization and Program Committees</i></a></li>
 					</ul>
 				</nav>
 				<footer>
