--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 											<tbody>
 											  <tr>
 												<td><u>Submission Deadline:</u> January 13, 2023</td>
-												<td><u>Submission Website:</u> <a href="https://intense23.hotcrp.com" target="_blank">https://intense23.hotcrp.com</a></td>
+												<td><u>Submission Website:</u> <a href="https://intense-icse2023.hotcrp.com" target="_blank">https://intense23.hotcrp.com</a></td>
 											  </tr>
 											  <tr>
 												<td><u>Notification to Authors:</u> February 23, 2023</td>
