--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 											<tbody>
 											  <tr>
 												<td><u>Submission Deadline:</u> January 13, 2023</td>
-												<td><u>Submission Website:</u> <a href="https://intense-icse2023.hotcrp.com" target="_blank">https://intense23.hotcrp.com</a></td>
+												<td><u>Submission Website:</u> <a href="https://intense-icse2023.hotcrp.com" target="_blank">https://intense-icse2023.hotcrp.com</a></td>
 											  </tr>
 											  <tr>
 												<td><u>Notification to Authors:</u> February 23, 2023</td>
-												<td><u>Workshop Website:</u> <a href="https://tinyurl.com/intense23" target="_blank">https://tinyurl.com/intense23</a></td>
+												<td><u>Workshop Website:</u> <a href="https://intense23.github.io/" target="_blank">https://intense23.github.io/</a></td>
 											  </tr>
 											  <tr>
 												<td><u>Camera-Ready Deadline:</u> March 17, 2023</td>
