--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/InteNSE.jpg" alt="" /></span>
-					<!-- <p>First Workshop on Interpretability and Robustness in Neural Software Engineering (ICSE 2023 Workshop)</p> -->
+					<span class="image avatar"><img src="images/InteNSE_1.jpg" alt="" /></span>
+					<h4>InteNSE'23 (ICSE Workshop)</h4>
 				</header>
 					<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active"><i>About</i></a></li>
-						<li><a href="#two"><i>Components</i></a></li>
-						<li><a href="#three"><i>Topics of Interest</i></a></li>
-						<li><a href="#four"><i>Submission Guidelines</i></a></li>
-						<li><a href="#five"><i>Participation</i></a></li>
-						<li><a href="#six"><i>Organization and Program Committees</i></a></li>
+						<li><a href="#one" class="active"><b>About</b></a></li>
+						<li><a href="#two"><b>Components</b></a></li>
+						<li><a href="#three"><b>Topics of Interest</b></a></li>
+						<li><a href="#four"><b>Submission Guidelines</b></a></li>
+						<li><a href="#five"><b>Participation</b></a></li>
+						<li><a href="#six"><b>Organization and Program Committees</b></a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -53,34 +53,35 @@
 									<header class="major">
 										<h4>InteNSE'23: The 1st International Workshop on Interpretability and
 											Robustness in Neural Software Engineering</h4>
-										<p style="text-align:center">May 14th, 2023</p>
-										<p style="text-align:center">[Co-located with ICSE'23, Melbourne, Australia]</p>					
+										<h4 style="text-align:center">May 14th, 2023</h4>
+										<h5 style="text-align:center">[Co-located with ICSE'23, Melbourne, Australia]</h5>					
 									</header>
+									</br>
+									<h3><a href="./CFP__InteNSE_Workshop.pdf" target="_blank"><b>Call for Papers</b></a></h3>
 									<p>
 										<table>
 											<thead>
 											  <tr>
-												<th>Important Dates:</th>
-												<th>Important Links:</th>
+												<th><h4>Important Dates:</h4></th>
+												<th><h4>Important Links:</h4></th>
 											  </tr>
 											</thead>
 											<tbody>
 											  <tr>
 												<td><u>Submission Deadline:</u> January 13, 2023</td>
-												<td><u>Submission Website:</u> <a href="https://intense-icse2023.hotcrp.com" target="_blank">https://intense-icse2023.hotcrp.com</a></td>
+												<td><u>Submission Website:</u> <a href="https://intense-icse2023.hotcrp.com" target="_blank">HotCRP</a></td>
 											  </tr>
 											  <tr>
-												<td><u>Notification to Authors:</u> February 23, 2023</td>
+												<td><u>Notification:</u> February 23, 2023</td>
 												<td><u>Workshop Website:</u> <a href="https://intense23.github.io/" target="_blank">https://intense23.github.io/</a></td>
 											  </tr>
 											  <tr>
-												<td><u>Camera-Ready Deadline:</u> March 17, 2023</td>
-												<td><u>Twitter:</u> <a href="https://twitter.com/intenseWorkshop" target="_blank">https://twitter.com/intenseWorkshop</a></td>
+												<td><u>Camera-Ready:</u> March 17, 2023</td>
+												<td><u>Twitter:</u> <a href="https://twitter.com/intenseWorkshop" target="_blank">@IntenseWorkshop</a></td>
 											  </tr>
 											</tbody>
 										  </table>
 									</p>
-									<p><a href="./CFP__InteNSE_Workshop.pdf" target="_blank"><b>Call for Papers</b></a></p>
 									<p>
 										<h4>Why InteNSE?</h4>
 										Code is the most recent modality of interest in the Machine Learning (ML) domain. Learning-based techniques have been shown to improve and revolutionize software engineering and analysis tasks, including code completion and synthesis, code captioning and documentation, code search and clone detection, recovering variable names and types, and software testing, verification, and debugging. Recent studies have even shown the great potential of neural models of code for decomposing the natural language reasoning problem into programmatic steps and solving it by executing the generated programs. However, most of these techniques consider ML as closed-box, i.e., only considering the final performance of the developed models to evaluate their effectiveness. Without a systematic and rigorous approach to interpreting neural models concerning code modality, one cannot validate their actual performance, generalizability, decision certainty, if/how they are learning what they are supposed to do, and why they make particular decisions.										
