--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/InteNSE_1.jpg" alt="" /></span>
-					<h4>InteNSE'23 (ICSE Workshop)</h4>
+					
 				</header>
 					<nav id="nav">
 					<ul>
@@ -47,7 +47,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/melbourne.jpg" alt="" />
+									<img src="images/melbourne.png" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
