--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/InteNSE_1.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/Logo.png" alt="" /></span>
 					
 				</header>
 					<nav id="nav">
