--- a/index.html
+++ b/index.html
@@ -336,7 +336,18 @@
 									</ul>
 									<h3>Program Commitee</h3>
 									<ul>
-										<li>TBA</li>
+                                                                                <li>Amin Alipour (University of Houston)</li>
+                                                                                <li>Anand Sawant (Endor Labs)</li>
+                                                                                <li>Fatemeh Fard (UBC Okanagan)</li>
+                                                                                <li>Foutse Khomh (Polytechnique Montreal)</li>
+                                                                                <li>Georgios Gousios (Delft/Endor Labs)</li>
+                                                                                <li>Hadi Hemmati (York University)</li>
+                                                                                <li>Jurgen Cito	(Tu Wien)</li>
+                                                                                <li>Profir-Petru Partachi (National Institute of Informatics, Tokyo)</li>
+                                                                                <li>Saikat Chakraborty	(Microsoft)</li>
+                                                                                <li>Santanu Dash (Royal Holloway)</li>
+                                                                                <li>Shamsa Abid	(SMU)</li>
+                                                                                <li>Vincent Hellendoorn	(CMU)</li>
 									</ul>
 				
 								</div>
